Fixes spacing issues.

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,7 +14,7 @@ $onyx: #49494b;
   }
 
   .card-main {
-    width: 19em;
+    max-width: 21em;
     height: 21em;
     object-fit: contain;
     overflow: hidden;
