--- a/src/components/projects.scss
+++ b/src/components/projects.scss
@@ -10,8 +10,9 @@
     background-color: $onyx;
 
     .projects-title{
-        margin-top: 2rem;
+      margin-top: 2rem;
       border: solid 4px $softgold;
+      
       h3{
         font-family: $cinzel;
         color: $softgold;
@@ -19,6 +20,30 @@
     }
 
   }
+
+  .overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: $onyx;
+    opacity: 0.7;
+    overflow: hidden;
+    transition: .5s ease; 
+    
+    .text {
+      color: white;
+      font-size: 20px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
+    }
+  }
+
+  
 
 
   .card-columns{
@@ -29,30 +54,11 @@
       border: solid 6px $rosegold;
       background-size: cover;
 
-      
-
-      .overlay {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        background-color: $onyx;
-        opacity: 0.7;
-        overflow: hidden;
+      .overlay {        
         width: 0;
         height: 100%;
-        transition: .5s ease;   
-
-        
+                  
         .text {
-          color: white;
-          font-size: 20px;
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          -webkit-transform: translate(-50%, -50%);
-          -ms-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
           white-space: wrap;
         }
       }
@@ -61,6 +67,7 @@
     }
     .project-1:hover .overlay {
       width: 100%;
+      cursor: pointer;
     }
 
     .project-2 {
@@ -69,27 +76,10 @@
       background-size: cover;
 
       .overlay {
-        position: absolute;
-        bottom: 100%;
-        left: 0;
-        right: 0;
-        background-color: $onyx;
-        opacity: 0.7;
-        overflow: hidden;
         width: 100%;
         height: 0;
-        transition: .5s ease;   
-
         
         .text {
-          color: white;
-          font-size: 20px;
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          -webkit-transform: translate(-50%, -50%);
-          -ms-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
           text-align: center;
         }
       }
@@ -97,41 +87,48 @@
     .project-2:hover .overlay {
       bottom: 0;
       height: 100%;
+      cursor: pointer;
     }
 
     .project-3 {
       background-image: url(./../../src/images/neighborhood_map.png);
-      border: solid 6px $rosegold;
+      border: solid 6px $silver;
       background-size: cover;
 
       .overlay {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        background-color: $onyx;
-        opacity: 0.75;
-        overflow: hidden;
+        bottom: 100%;
         width: 100%;
         height: 0;
-        transition: .5s ease;   
-
         
         .text {
-          color: white;
-          font-size: 20px;
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          -webkit-transform: translate(-50%, -50%);
-          -ms-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
           text-align: center;
         }
       }
     }
     .project-3:hover .overlay {
+      bottom: 0;
       height: 100%;
+      cursor: pointer;
+    }
+
+    .project-4 {
+      background-image: url(./../../src/images/exploresocal.png);
+      border: solid 6px $rosegold;
+      background-size: cover;
+
+      .overlay {
+        left: 100%;
+        width: 0;
+        height: 100%;
+        
+        .text {
+          white-space: wrap;
+        }
+      }
+    }
+    .project-4:hover .overlay {
+      width: 100%;
+      left: 0;
       cursor: pointer;
     }
   }
